@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods


class Collaborator {
    name
    birthdate
    admissionDate
    mobileNumber
    e-mail
    taxpayerNumber
}

class Team {
    teamId
    maxNumberElements
    minNumberElements
}

class GreenSpace{
name
type
size
manager

}

class AgendaEntry {
    startingDate
    progressStatus

}


class ToDoEntry {
    title
    description
    duration
    urgencyStatus


}

class Agenda{
}

Agenda "1" -- "1..*" AgendaEntry: has >

AgendaEntry "1" -- "1" ToDoEntry: is >


AgendaEntry "1" -- "1" Team : is assigned >

Team "1" -- "1..*" Collaborator : has >

ToDoEntry "*" -- "1" GreenSpace : is assigned >



@enduml
